--- a/python shenanigans/python back.ipynb
+++ b/python shenanigans/python back.ipynb
@@ -5,12 +5,22 @@
    "execution_count": 2,
    "id": "cecaf891",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1903063357.py, line 87)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 87\u001b[1;36m\u001b[0m\n\u001b[1;33m    ddef obtener_recomendacion_usuario_nuevo(usuario_nuevo):\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import firebase_admin\n",
     "from firebase_admin import credentials, db\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "if not firebase_admin._apps:\n",
     "    \n",
@@ -18,11 +28,14 @@
     "    firebase_admin.initialize_app(cred, {\n",
     "        'databaseURL': 'https://sistema-rec-dmi-default-rtdb.firebaseio.com/'\n",
     "    })\n",
-    "ref = db.reference('/base_usuarios') \n",
+    "ref = db.reference('/base_usuarios')\n",
+    "ref2 = db.reference('/base_materias')\n",
     "\n",
     "datos_firebase = ref.get()\n",
+    "datos_firebase2 = ref2.get()\n",
     "\n",
     "df_firebase = pd.DataFrame(datos_firebase)\n",
+    "df_materias = pd.DataFrame(datos_firebase2)\n",
     "\n",
     "rating_columns = [\n",
     "    'electiva',\n",
@@ -55,12 +68,12 @@
     "        if electiva.lower() != 'no':\n",
     "            nueva_fila = {\n",
     "                'electiva': electiva,\n",
-    "                'general_rating': fila[general_col] if fila[general_col] != 'none' else None,\n",
-    "                'method_rating': fila[method_col] if fila[method_col] != 'none' else None,\n",
-    "                'personalGrowth_rating': fila[personalGrowth_col] if fila[personalGrowth_col] != 'none' else None,\n",
-    "                'rec_rating': fila[rec_col] if fila[rec_col] != 'none' else None,\n",
-    "                'teacher_rating': fila[teacher_col] if fila[teacher_col] != 'none' else None,\n",
-    "                'time_rating': fila[time_col] if fila[time_col] != 'none' else None,\n",
+    "                'general_rating': fila[general_col] if fila[general_col] != '' else None,\n",
+    "                'method_rating': fila[method_col] if fila[method_col] != '' else None,\n",
+    "                'personalGrowth_rating': fila[personalGrowth_col] if fila[personalGrowth_col] != '' else None,\n",
+    "                'rec_rating': fila[rec_col] if fila[rec_col] != '' else None,\n",
+    "                'teacher_rating': fila[teacher_col] if fila[teacher_col] != '' else None,\n",
+    "                'time_rating': fila[time_col] if fila[time_col] != '' else None,\n",
     "            }\n",
     "            \n",
     "            df_temporal = pd.DataFrame([nueva_fila], columns=rating_columns)\n",
@@ -76,7 +89,43 @@
     "    similar_indices = similarity_scores.argsort()[0][-top_n - 1:-1][::-1]\n",
     "    similar_electives = df_ratings.iloc[similar_indices]['electiva'].tolist()\n",
     "\n",
-    "    return similar_electives\n"
+    "    return similar_electives\n",
+    "\n",
+    "electiva_seleccionada = 'Innovación en servicios'\n",
+    "similares = find_similar_electives(electiva_seleccionada)\n",
+    "    \n",
+    "print(similares)\n",
+    "\n",
+    "df_materias = df_materias.rename(columns={'class_name': 'electiva'})\n",
+    "\n",
+    "df_completo = pd.merge(df_ratings, df_materias, on='electiva', how='inner')\n",
+    "\n",
+    "print(df_completo.columns)\n",
+    "\n",
+    "ddef obtener_recomendacion_usuario_nuevo(usuario_nuevo):\n",
+    "    recomendacion = {}\n",
+    "\n",
+    "    for indice, fila in df_completo.iterrows():\n",
+    "        # Verificar si el usuario no ha visto la electiva\n",
+    "        if pd.isna(fila['general_rating']):\n",
+    "            # Calcular similitud entre el usuario y la electiva\n",
+    "            similitud = cosine_similarity([list(usuario_nuevo.values)], [list(fila[['general_rating', 'method_rating', 'personalGrowth_rating', 'rec_rating', 'teacher_rating', 'time_rating']].values)])[0][0]\n",
+    "            recomendacion[fila['electiva']] = similitud\n",
+    "\n",
+    "    # Seleccionar la electiva con mayor similitud\n",
+    "    mejor_electiva = max(recomendacion, key=recomendacion.get)\n",
+    "    afinidad = recomendacion[mejor_electiva]\n",
+    "\n",
+    "    return mejor_electiva, afinidad\n",
+    "\n",
+    "# Usuario nuevo\n",
+    "nuevo_usuario = {'general_rating': 1, 'method_rating': 0, 'personalGrowth_rating': 1, 'rec_rating': 0, 'teacher_rating': 1, 'time_rating': 1}\n",
+    "\n",
+    "# Obtener recomendación para el usuario nuevo\n",
+    "mejor_electiva_nuevo, afinidad_nuevo = obtener_recomendacion_usuario_nuevo(nuevo_usuario)\n",
+    "\n",
+    "# Mostrar la recomendación para el usuario nuevo\n",
+    "print(f\"Mejor recomendación para el usuario nuevo: {mejor_electiva_nuevo} (Afinidad: {afinidad_nuevo})\")"
    ]
   },
   {
@@ -84,64 +133,7 @@
    "execution_count": null,
    "id": "f96ce3a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [23/Nov/2023 17:53:29] \"OPTIONS /rec-dmi HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Nov/2023 17:53:29] \"POST /rec-dmi HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'prefer': 'dev', 'day': 'martes', 'modal': 'presencial'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [23/Nov/2023 19:06:12] \"OPTIONS /rec-dmi HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Nov/2023 19:06:13] \"POST /rec-dmi HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'prefer': 'dev', 'day': 'martes', 'modal': 'presencial', 'importance': 'personal-growth'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [23/Nov/2023 19:11:20] \"OPTIONS /rec-dmi HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [23/Nov/2023 19:11:20] \"POST /rec-dmi HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'prefer': 'ui', 'day': 'martes', 'modal': 'virtual', 'importance': 'rec'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from flask import Flask, request, jsonify\n",
     "from flask_cors import CORS\n",
@@ -153,13 +145,7 @@
     "def recibir_datos():\n",
     "    datos_recibidos = request.json  \n",
     "    print(datos_recibidos)\n",
-    "    \n",
-    "    electiva_seleccionada = 'Innovación en servicios'\n",
-    "    similares = find_similar_electives(electiva_seleccionada)\n",
-    "    \n",
-    "    respuesta = {\"similares\": similares,\n",
-    "                \"hello\":\"hi\"}\n",
-    "    \n",
+    "    respuesta = {\"please\":\"help\"}\n",
     "    return jsonify(respuesta)\n",
     "\n",
     "if __name__ == '__main__':\n",
