ahora puede pasar json a endpoint web

--- a/python shenanigans/python back.ipynb
+++ b/python shenanigans/python back.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cecaf891",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1903063357.py, line 87)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 87\u001b[1;36m\u001b[0m\n\u001b[1;33m    ddef obtener_recomendacion_usuario_nuevo(usuario_nuevo):\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['electiva', 'general_rating', 'method_rating', 'personalGrowth_rating',\n",
+      "       'rec_rating', 'teacher_rating', 'time_rating', 'classification', 'day',\n",
+      "       'modal'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
@@ -20,7 +22,6 @@
     "import firebase_admin\n",
     "from firebase_admin import credentials, db\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "if not firebase_admin._apps:\n",
     "    \n",
@@ -93,39 +94,81 @@
     "\n",
     "electiva_seleccionada = 'Innovación en servicios'\n",
     "similares = find_similar_electives(electiva_seleccionada)\n",
-    "    \n",
-    "print(similares)\n",
     "\n",
     "df_materias = df_materias.rename(columns={'class_name': 'electiva'})\n",
     "\n",
     "df_completo = pd.merge(df_ratings, df_materias, on='electiva', how='inner')\n",
     "\n",
-    "print(df_completo.columns)\n",
+    "df_promedios = df_ratings.groupby('electiva').agg({\n",
+    "    'general_rating': 'mean',\n",
+    "    'method_rating': 'mean',\n",
+    "    'personalGrowth_rating': 'mean',\n",
+    "    'rec_rating': 'mean',\n",
+    "    'teacher_rating': 'mean',\n",
+    "    'time_rating': 'mean'\n",
+    "}).reset_index()\n",
     "\n",
-    "ddef obtener_recomendacion_usuario_nuevo(usuario_nuevo):\n",
-    "    recomendacion = {}\n",
+    "df_promedios_filtrado = df_promedios.merge(df_materias, left_on='electiva', right_on='electiva')\n",
     "\n",
-    "    for indice, fila in df_completo.iterrows():\n",
-    "        # Verificar si el usuario no ha visto la electiva\n",
-    "        if pd.isna(fila['general_rating']):\n",
-    "            # Calcular similitud entre el usuario y la electiva\n",
-    "            similitud = cosine_similarity([list(usuario_nuevo.values)], [list(fila[['general_rating', 'method_rating', 'personalGrowth_rating', 'rec_rating', 'teacher_rating', 'time_rating']].values)])[0][0]\n",
-    "            recomendacion[fila['electiva']] = similitud\n",
+    "print(df_promedios_filtrado.columns)\n",
     "\n",
-    "    # Seleccionar la electiva con mayor similitud\n",
-    "    mejor_electiva = max(recomendacion, key=recomendacion.get)\n",
-    "    afinidad = recomendacion[mejor_electiva]\n",
+    "df_promedios_filtrado_no_duplicates = df_promedios_filtrado.drop_duplicates(subset='electiva', keep='first')\n",
     "\n",
-    "    return mejor_electiva, afinidad\n",
+    "df_promedio_dict = df_promedios_filtrado_no_duplicates.set_index('electiva').to_dict(orient='index')\n",
     "\n",
-    "# Usuario nuevo\n",
-    "nuevo_usuario = {'general_rating': 1, 'method_rating': 0, 'personalGrowth_rating': 1, 'rec_rating': 0, 'teacher_rating': 1, 'time_rating': 1}\n",
+    "def convertir_calificacion(calificacion):\n",
+    "    try:\n",
+    "        return float(calificacion)\n",
+    "    except ValueError:\n",
+    "        return 0\n",
     "\n",
-    "# Obtener recomendación para el usuario nuevo\n",
-    "mejor_electiva_nuevo, afinidad_nuevo = obtener_recomendacion_usuario_nuevo(nuevo_usuario)\n",
+    "def seleccionar_electiva(datos_usuario):\n",
+    "    usuario = {}\n",
+    "    for elemento in datos_usuario['usuario']:\n",
+    "        usuario.update(elemento)\n",
     "\n",
-    "# Mostrar la recomendación para el usuario nuevo\n",
-    "print(f\"Mejor recomendación para el usuario nuevo: {mejor_electiva_nuevo} (Afinidad: {afinidad_nuevo})\")"
+    "    for clave, valor in usuario.items():\n",
+    "        usuario[clave] = convertir_calificacion(valor)\n",
+    "\n",
+    "    variables_interes = ['general_rating', 'method_rating', 'personalGrowth_rating', 'rec_rating', 'teacher_rating', 'time_rating']\n",
+    "\n",
+    "    similitudes = {}\n",
+    "    for electiva, perfil in df_promedio_dict.items():\n",
+    "        perfil_usuario = [usuario.get(k, 0) for k in variables_interes]\n",
+    "        perfil_electiva = [perfil.get(k, 0) for k in variables_interes]\n",
+    "\n",
+    "        similitud = cosine_similarity([perfil_usuario], [perfil_electiva])[0][0]\n",
+    "\n",
+    "        similitudes[electiva] = similitud\n",
+    "\n",
+    "    electivas_afines = sorted(similitudes, key=similitudes.get, reverse=True)[:5]\n",
+    "    afinidades = [similitudes[electiva] for electiva in electivas_afines]\n",
+    "\n",
+    "    electiva_seleccionada = None\n",
+    "    for electiva in electivas_afines:\n",
+    "        if df_promedio_dict[electiva]['classification'] == usuario['classification']:\n",
+    "            electiva_seleccionada = electiva\n",
+    "            break\n",
+    "\n",
+    "    if electiva_seleccionada is None:\n",
+    "        electiva_seleccionada = electivas_afines[0]\n",
+    "\n",
+    "    afinidad = similitudes[electiva_seleccionada]\n",
+    "\n",
+    "    return electiva_seleccionada\n",
+    "\n",
+    "def construir_json(materia):\n",
+    "    materia_info = df_materias[df_materias['electiva'] == materia].iloc[0]\n",
+    "\n",
+    "    info = {\n",
+    "        \"class_name\": materia_info['electiva'],\n",
+    "        \"prefer\": materia_info['classification'],\n",
+    "        \"Horario\": materia_info['day'], \n",
+    "        \"modalidad\": materia_info['modal'],\n",
+    "        \"similares\" : find_similar_electives(materia, top_n=3)\n",
+    "    }\n",
+    "\n",
+    "    return info\n"
    ]
   },
   {
@@ -133,7 +176,35 @@
    "execution_count": null,
    "id": "f96ce3a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [24/Nov/2023 19:23:46] \"OPTIONS /rec-dmi HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [24/Nov/2023 19:23:46] \"POST /rec-dmi HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'usuario': [{'general_rating': 5}, {'method_rating': '3'}, {'personalGrowth_rating': '3'}, {'rec_rating': '3'}, {'teacher_rating': '3'}, {'time_rating': 5}, {'classification': 'develop'}, {'day': 'martes'}, {'modal': 'presencial'}]}\n",
+      "{'class_name': 'Innovación en modelos de negocio', 'prefer': 'UX', 'Horario': 'miercoles', 'modalidad': 'presencial', 'similares': ['Diseño de experiencia de usuario (UX & UI)', 'Estrategia de innovación', 'De otra carrrera']}\n"
+     ]
+    }
+   ],
    "source": [
     "from flask import Flask, request, jsonify\n",
     "from flask_cors import CORS\n",
@@ -145,8 +216,11 @@
     "def recibir_datos():\n",
     "    datos_recibidos = request.json  \n",
     "    print(datos_recibidos)\n",
-    "    respuesta = {\"please\":\"help\"}\n",
-    "    return jsonify(respuesta)\n",
+    "    datos_usuario = datos_recibidos\n",
+    "    electiva_seleccionada = seleccionar_electiva(datos_usuario)\n",
+    "    respuesta = construir_json(electiva_seleccionada)\n",
+    "    print(respuesta)\n",
+    "    return respuesta\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(port=5000) "
